--- a/ClassLibrary1/Cripto.Domain.csproj
+++ b/ClassLibrary1/Cripto.Domain.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronPdf" Version="2020.10.3.3" />
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
   </ItemGroup>
 
